Create Forgot Password and Reset Password view

--- a/views/session/forgotPassword.html
+++ b/views/session/forgotPassword.html
@@ -14,12 +14,12 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./assets/img/identity/logo_ingsistemas.png"
+      href="/assets/img/identity/logo_ingsistemas.png"
     />
 
-    <title>Login - SEADOC</title>
-    <link href="css/styles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="./css/indexLogin.css" />
+    <title>Forgot Password - SEADOC</title>
+    <link href="/css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/css/indexLogin.css" />
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
@@ -32,7 +32,7 @@
     <div id="layoutAuthentication">
       <div id="layoutAuthentication_content">
 
-        <!-- Form Login -->
+        <!-- Form Forgot Password -->
         <div
           id="home"
           class="m-0 vh-100 row justify-content-center align-items-center"
@@ -45,10 +45,10 @@
             </header>
             <div class="d-flex flex-column">
               <p class="align-self-center">
-                Ingresa tus datos para iniciar sesión
+                Ingresa tu correo electronico para recuperar tu contraseña
               </p>
 
-              <!-- Spinner -->
+              <!-- Spinner
               <div id="sppiner">
                 <div
                   id="spinner-container"
@@ -58,7 +58,7 @@
                     <span class="sr-only">Cargando...</span>
                   </div>
                 </div>
-              </div>
+              </div> -->
 
               <!-- Alert -->
               <div class="form-floating mb-3" id="alert"></div>
@@ -67,23 +67,16 @@
               <form action="" class="d-flex flex-column form-floating">
                 <div class="form-group">
                   <input
-                    placeholder="Código"
+                    placeholder="Correo electronico"
                     type="text"
-                    id="inputCodigo"
+                    id="inputEmail"
                     class="form-control mt-1 rounded"
                     required
                   />
                   <input
-                    placeholder="Documento"
+                    placeholder="Confirmar correo electronico"
                     type="text"
-                    id="inputDocumento"
-                    class="form-control mt-2 rounded"
-                    required
-                  />
-                  <input
-                    placeholder="Contraseña"
-                    type="password"
-                    id="inputPassword"
+                    id="inputConfirmEmail"
                     class="form-control mt-2 rounded"
                     required
                   />
@@ -91,16 +84,16 @@
                 <!-- <button class="btn btn-danger mt-4" id="login">Iniciar Sesión</button> -->
                 <div class="align-items-center text-center mt-4 mb-0">
                   <a class="btn btn-danger" href="#" id="login"
-                    >Iniciar Sesion</a
+                    >Enviar</a
                   >
                 </div>
               </form>
               <div class="small mt-2">
                 <a
-                  href="./views/session/forgotPassword.html"
+                  href="/index.html"
                   style="text-decoration: none"
                   class="text-danger"
-                  >¿Olvido su contraseña?</a
+                  >Iniciar Sesión</a
                 >
               </div>
             </div>
@@ -137,7 +130,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
       crossorigin="anonymous"
     ></script>
-    <script src="js/scripts.js"></script>
-    <script src="js/login.js"></script>
+    <script src="/js/scripts.js"></script>
+    <script src="/js/session/forgotPassword.js"></script>
   </body>
 </html>
